--- a/images/chieu-truc-den-12/config.ini
+++ b/images/chieu-truc-den-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-12.html
 lastopen = 2024-06-07 00:20:09
 
 [search]
-lastsearch = 2024-07-19 14:48:07
+lastsearch = 2024-07-19 21:35:37
 
 [demxanh.com]
 match = -94.1%%
@@ -12,9 +12,9 @@ title = Mua chiếu trúc, đến ngay Đệm Xanh - Tổng hợp ...
 url = https://demxanh.com/mua-chieu-truc-den-ngay-dem-xanh-tong-hop-chieu-sieu-mat-2022.html
 
 [chieutrelanlan.com]
-match = -58.8%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html
+match = -64.7%%
+title = Chiếu trúc mắt nhỏ có viền màu đen 140x190cm
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-140x190cm-34.html
 
 [thegioidemtot.vn]
 match = -58.8%%
@@ -37,9 +37,9 @@ title = Chiếu trúc hạt đen cao cấp, bền , đẹp, Hàng Loại I
 url = https://shopee.vn/Chiếu-trúc-hạt-đen-cao-cấp-bền-đẹp-Hàng-Loại-I-i.296736591.9319890080
 
 [vongxepsaigon.vn]
-match = -188.2%%
-title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1 - Kích thước ...
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-120cm/
+match = -158.8%%
+title = chiếu trúc có viền - Võng Xếp Chính Hãng Giá Rẻ Nhất TPHCM
+url = https://vongxepsaigon.vn/chieu-truc-co-vien/
 
 [www.diepxuan.com]
 match = -64.7%%
@@ -80,4 +80,9 @@ url = https://demsonghonghanoi.com/loai-chieu-truc-nao-tot-nhat-tren-thi-truong/
 match = 30.0%%
 title = Chiếu Trúc
 url = https://nemsaithanh.com/chieu-truc/chieu-truc/
+
+[www.nemsaithanh.com]
+match = 30.0%%
+title = Chiếu Trúc
+url = https://www.nemsaithanh.com/san-pham/chieu-truc-135.html
 
