--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-19 20:30:25
+lastsearch = 2024-07-19 21:36:18
 
 [www.lazada.vn]
 match = -88.9%%
@@ -17,9 +17,9 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -200.0%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai ...
-url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
+match = -100.0%%
+title = HỆ THỐNG SIÊU THỊ NỆM HÀNG ĐẦU VIỆT NAM TỔNG ...
+url = https://m.facebook.com/media/set/?vanity=vuanem.vn&set=a.693142637496508
 
 [thegioinem.com]
 match = -105.6%%
@@ -27,9 +27,9 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.facebook.com]
-match = -127.8%%
-title = Khay cuốn nem siêu tốc | KHAY CUỐN SIÊU TỐC | CUỐN ...
-url = https://www.facebook.com/ngoinhachichbong/videos/khay-cuốn-nem-siêu-tốc/1791938007504711/
+match = -27.8%%
+title = Siêu Thị Nệm | Ho Chi Minh City
+url = https://www.facebook.com/sieuthinem/
 
 [eva.vn]
 match = -150.0%%
@@ -52,13 +52,13 @@ title = bảng giá sản phẩm kymdan
 url = https://www.kymdan.com/bai-viet/bang-gia-san-pham-kymdan
 
 [www.instagram.com]
-match = -150.0%%
-title = Nem chua rán món ăn vặt chuẩn Hà Nội giòn tan, dai ...
-url = https://www.instagram.com/p/CGJhaWPgssh/
+match = -50.0%%
+title = NEM Furniture JSC (@nemfurniturejsc)
+url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [www.diepxuan.com]
-match = -55.6%%
-title = Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
+match = -111.1%%
+title = Điệp Xuân Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 
 [nemphuoclong.vn]
