--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-19 18:44:27
+lastsearch = 2024-07-19 21:32:46
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -22,9 +22,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/Korea_Media_Rating_Board
+match = -72.7%%
+title = Kristi Noem
+url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
 match = -108.7%%
@@ -112,9 +112,9 @@ title = Amazon reinvents the etail wheel
 url = https://www.ft.com/content/b93a8683-6a9b-365a-aba7-d771407db26b
 
 [cryptoslate.com]
-match = -87.0%%
-title = Introduction to NEM (XEM): The Proof-of-Importance Coin
-url = https://cryptoslate.com/nem/
+match = -56.5%%
+title = NEM jumps to a 42 week high – reasons unknown
+url = https://cryptoslate.com/nem-jumps-to-a-42-week-high-reasons-unknown/
 
 [apps.dtic.mil]
 match = -47.8%%
@@ -547,9 +547,9 @@ title = What happened to Psy after the success of Gangnam Style?
 url = https://uk.news.yahoo.com/on-this-day-psy-gangnam-style-075352911.html
 
 [www.instagram.com]
-match = -78.3%%
-title = ARCAN (@arcansaigon) • Instagram photos and videos
-url = https://www.instagram.com/arcansaigon/?hl=en
+match = 8.7%%
+title = xnemsis - ṉem scδrecrow
+url = https://www.instagram.com/xnemsis/
 
 [www.governmentattic.org]
 match = -104.3%%
@@ -570,4 +570,9 @@ url = https://www.nytimes.com/2024/05/14/dining/nyc-restaurant-news.html
 match = -39.1%%
 title = Northern Limit Line, South Korea - Panochada
 url = https://panochada.com/2020/08/27/northern-limit-line-south-korea/
+
+[www.rferl.org]
+match = -108.7%%
+title = Tajik President's Demand For 'Respect' From Putin Viewed ...
+url = https://www.rferl.org/a/tajikistan-russia-rahmon-youtube-respect/32084773.html
 
