--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-19 20:37:39
+lastsearch = 2024-07-19 23:15:43
 
 [www.lazada.vn]
-match = -61.1%%
-title = Orangesky Cần Câu Cá Biển Yuantou ...
-url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
+match = -88.9%%
+title = Nệm Siêu Nhẹ Giá Tốt T03/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/nem-sieu-nhe/
 
 [www.facebook.com]
-match = -27.8%%
-title = Siêu Thị Nệm | Ho Chi Minh City
-url = https://www.facebook.com/sieuthinem/
+match = -11.1%%
+title = NEM Fashion added a new photo.
+url = https://www.facebook.com/photo.php?fbid=778686120960754&id=100064581196454&set=a.651941746968526
 
 [thegioinem.com]
 match = -105.6%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = 6.7%%
-title = Người Việt Cali
-url = https://m.facebook.com/groups/1330533356979172/?locale=vi_VN
+match = -11.1%%
+title = NEM Fashion added a new photo.
+url = https://m.facebook.com/photo/?fbid=780012377494795&set=pcb.780016060827760
 
 [emartmall.com.vn]
 match = 0.0%%
