--- a/images/tham-ghe-da-dai/config.ini
+++ b/images/tham-ghe-da-dai/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da-dai.html
 lastopen = 2024-06-07 00:36:57
 
 [search]
-lastsearch = 2024-07-19 22:46:49
+lastsearch = 2024-07-19 23:21:08
 
 [shopee.vn]
 match = -146.7%%
@@ -12,9 +12,9 @@ title = bộ thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=bộ thảm trải ghế
 
 [ghedagiago.com]
-match = -166.7%%
-title = Bảng Giá Bàn Ghế Đá Năm 2024 [Cập Nhật 1 Giờ Trước]
-url = https://ghedagiago.com/bang-gia-bo-ban-ghe-da-san-vuon/
+match = -100.0%%
+title = [MẪU VÀ GIÁ] 70+ BỘ BÀN GHẾ ĐÁ NGOÀI TRỜI
+url = https://ghedagiago.com/danh-muc/ban-ghe-da-ngoai-troi/
 
 [ghedatruongan.com]
 match = -80.0%%
@@ -32,9 +32,9 @@ title = 30+ Mẫu Ghế Gỗ Da Đẹp Cho Không Gian Bài Trí Sang ...
 url = https://anmoc.vn/blogs/news/ghe-go-da
 
 [ghedamienbac.com]
-match = -133.3%%
-title = Cung Cấp Bàn Ghế Đá Miền Bắc Giá Rẻ,Mẫu Mã Đẹp
-url = https://ghedamienbac.com/ban-ghe-da/
+match = -193.3%%
+title = Cung Cấp Bàn Ghế Đá Granito Miền Bắc Rẻ Nhất Thị Trường
+url = https://ghedamienbac.com/ban-ghe-da-granito/
 
 [bangheda.info]
 match = -140.0%%
