--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-19 12:36:09
+lastsearch = 2024-07-19 23:17:12
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -22,8 +22,8 @@ title = App by School
 url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2021-2022-app-data-by-school-q6.xls
 
 [medboard.nv.gov]
-match = -110.0%%
-title = Disciplinary Actions - Board of Medical Examiners
+match = -90.0%%
+title = Disciplinary Actions - Medical Examiners Board
 url = https://medboard.nv.gov/Patients/Disciplinary/DisciplinaryActions/
 
 [www.uclahealth.org]
@@ -62,9 +62,9 @@ title = Exercise in patients with inflammatory bowel diseases
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
 
 [profiles.ucla.edu]
-match = 0.0%%
-title = Daniel H Geschwind
-url = https://profiles.ucla.edu/daniel.geschwind
+match = -6.7%%
+title = Bogdan Pasaniuc
+url = https://profiles.ucla.edu/bogdan.pasaniuc
 
 [www.sec.gov]
 match = -20.0%%
