--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-19 22:48:16
+lastsearch = 2024-07-19 23:41:50
 
 [chieutruc.info]
 match = -63.6%%
@@ -32,9 +32,9 @@ title = Sự phát triển của thai nhi tuần 18
 url = https://www.vinmec.com/vi/tin-tuc/thong-tin-suc-khoe/san-phu-khoa-va-ho-tro-sinh-san/su-phat-trien-cua-thai-nhi-tuan-18/
 
 [www.youtube.com]
-match = -68.2%%
-title = 60 Giây Sáng - Ngày 18/07/2024 | HTV Tin tức
-url = https://www.youtube.com/watch?v=TWwQZOqNQd4
+match = 9.1%%
+title = [HD] Chiếu cói Kim Sơn - Ninh Bình
+url = https://www.youtube.com/watch?v=3QOyWtlqmqg
 
 [www.facebook.com]
 match = 40.9%%
