--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-07-19 17:15:48
+lastsearch = 2024-07-19 23:42:01
 
 [shopee.vn]
 match = 18.5%%
@@ -22,9 +22,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [foreverbedding.net]
-match = 0.0%%
-title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
+match = -59.3%%
+title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 
 [kyoryo.vn]
 match = -40.7%%
@@ -97,8 +97,8 @@ title = Chiếu Mây Điều Hòa cao cấp
 url = https://nemsaithanh.com/chieu-truc-cac-loai/chieu-may-dieu-hoa-cao-cap/
 
 [fptshop.com.vn]
-match = -29.6%%
-title = Chiếu điều hoà là gì? Dùng chiếu điều hòa có tốt không?
+match = 0.0%%
+title = 
 url = https://fptshop.com.vn/tin-tuc/dien-may/chieu-dieu-hoa-la-gi-161105
 
 [voicon.net]
