--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-19 23:18:50
+lastsearch = 2024-07-19 23:42:49
 
 [helloviettravel.com]
 match = -50.0%%
@@ -27,9 +27,9 @@ title = Du lịch Việt Nam - 18/5/2024 - Video đã phát trên VTV1
 url = https://vtv.vn/video/du-lich-viet-nam-18-5-2024-676711.htm
 
 [www.facebook.com]
-match = -181.2%%
-title = ‍♂️‍♀️Khám phá Khu trải nghiệm 18 tầng địa ngục tại Điểm ...
-url = https://www.facebook.com/quangninhgate/videos/️️khám-phá-khu-trải-nghiệm-18-tầng-địa-ngục-tại-điểm-du-lịch-quảng-ninh-gatekhu-/440182313402897/
+match = -12.5%%
+title = Du Lịch USA và Thế Giới
+url = https://www.facebook.com/groups/dulichusavathegioi/
 
 [vinpearl.com]
 match = -156.2%%
