--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-19 21:19:56
+lastsearch = 2024-07-19 23:35:00
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -143.8%%
-title = LẶNG LẼ CHIỀU TAN CA ! Ế DÀI CẢNH CHỢ CÔNG NHÂN ...
-url = https://www.youtube.com/watch?v=aMNreu6QNI8
+match = -212.5%%
+title = Tâm sự số 804 🌈 Tính cảnh cáo tiểu tam ai ngờ được tiểu tam ...
+url = https://www.youtube.com/watch?v=gAxoR-MNbkM
 
 [hawater.com.vn]
 match = -75.0%%
@@ -152,9 +152,9 @@ title = lịch thi đấu sea games 32 ngày 16 tháng 05
 url = https://caodangtkv.edu.vn/Xsn/20240615-77kfuhesoi kèo tài xỉu việt nam malaysia.html
 
 [www.facebook.com]
-match = 7.1%%
-title = Cuối Giờ Chiều
-url = https://www.facebook.com/cuoigiochieu/
+match = -22.2%%
+title = Nhược Lạc
+url = https://www.facebook.com/nhuoclac.writing/
 
 [suckhoedoisong.vn]
 match = -225.0%%
@@ -497,9 +497,9 @@ title = Phân tích kỹ thuật phiên chiều 16/07: Tâm lý lạc quan quay 
 url = https://vn.investing.com/news/stock-market-news/phan-tich-ky-thuat-phien-chieu-1607-tam-ly-lac-quan-quay-tro-lai-2186636
 
 [kinhtedothi.vn]
-match = -231.2%%
-title = Tai nạn giao thông mới nhất 19/7/2024: cắt mặt xe đầu kéo ...
-url = https://kinhtedothi.vn/tai-nan-giao-thong-moi-nhat-19-7-2024-cat-mat-xe-dau-keo-bi-tong-tu-vong.html
+match = -225.0%%
+title = Tai nạn giao thông mới nhất 16/7/2024: lọt gầm xe, cụ ông ...
+url = https://kinhtedothi.vn/tai-nan-giao-thong-moi-nhat-16-7-2024-lot-gam-xe-cu-ong-82-tuoi-tu-vong.html
 
 [www.trip.com]
 match = -112.5%%
