--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-07-19 22:49:53
+lastsearch = 2024-07-19 23:42:24
 
 [chieutrucsaigon.com]
-match = -38.1%%
-title = XU HƯỚNG SỬ DỤNG CHIẾU TĂM TRÚC NĂM 2019
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/xu-huong-su-dung-chieu-tam-truc-nam-2019-68.html
+match = 0.0%%
+title = CHIẾU TRÚC SẢN PHẨM ĐỘC ĐÁO ĐA DẠNG
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-dao-da-dang-40.html
 
 [chieutrelanlan.com]
 match = -76.2%%
@@ -62,9 +62,9 @@ title = Chiếu Trúc Các Loại
 url = https://www.nemsaithanh.com/chieu-truc-cac-loai/
 
 [shopee.vn]
-match = -109.5%%
-title = chiếu tre 1,4*1,9m hạt nâu không viền hàng Việt Nam siêu rẻ
-url = https://shopee.vn/Chiếu-trúc-chiếu-tre-1-4*1-9m-hạt-nâu-không-viền-hàng-Việt-Nam-siêu-rẻ-i.15000357.2176483881
+match = -23.8%%
+title = Chiếu trúc 140cm đến 180cm hạt nâu có viền
+url = https://shopee.vn/Chiếu-trúc-140cm-đến-180cm-hạt-nâu-có-viền-i.231274383.5918690674
 
 [www.lazada.vn]
 match = -66.7%%
