--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-19 22:50:59
+lastsearch = 2024-07-19 23:40:33
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title = MC Ren
 url = https://en.wikipedia.org/wiki/MC_Ren
 
 [books.google.com]
-match = -440.0%%
-title = The Monasteries of the Wadi 'n Natrûn: The history of the ...
-url = https://books.google.com/books?id=_mIPAQAAMAAJ&pg=PA206&lpg=PA206&dq=man+ren+16&source=bl&ots=HlowAh14EQ&sig=ACfU3U2Duuhs3h7UCW3yvNhJKgyXDvOz5Q&hl=en&sa=X&ved=2ahUKEwj-97vLurOHAxUEEFkFHSRwBjkQ6AF6BAggEAM
+match = -280.0%%
+title = The Letter to Ren An and Sima Qian’s Legacy
+url = https://books.google.com/books?id=eCnvCwAAQBAJ&pg=PA170&lpg=PA170&dq=man+ren+16&source=bl&ots=0fsiNUhsYa&sig=ACfU3U16JONXjZ0jC3-W8R8kFCXAPV6Rtg&hl=en&sa=X&ved=2ahUKEwjL6KPVxbOHAxXbHTQIHeLCDcgQ6AF6BAgYEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
@@ -265,4 +265,9 @@ url = https://mucrusaders.com/sports/mens-soccer/roster/ren-suzuki/7940
 match = 0.0%%
 title = 
 url = https://colemizestudios.com/four-bar-theory-keep-listeners-hooked/
+
+[www.ncsasports.org]
+match = -280.0%%
+title = Jason Ren '16 Recruiting Profile - Men's Soccer
+url = https://www.ncsasports.org/mens-soccer-recruiting/michigan/canton/canton-high-school16/jason-ren
 
