--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-19 21:36:18
+lastsearch = 2024-07-19 23:39:58
 
 [www.lazada.vn]
 match = -88.9%%
@@ -17,14 +17,14 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -100.0%%
-title = HỆ THỐNG SIÊU THỊ NỆM HÀNG ĐẦU VIỆT NAM TỔNG ...
-url = https://m.facebook.com/media/set/?vanity=vuanem.vn&set=a.693142637496508
+match = -16.7%%
+title = NEM CUA BỂ VUÔNG SIÊU CHẤT LƯỢNG
+url = https://m.facebook.com/groups/213134222458659/posts/1913588515746546/
 
 [thegioinem.com]
-match = -105.6%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = 17.6%%
+title = Bảng Giá Nệm 2024
+url = https://thegioinem.com/bang-gia-nem
 
 [www.facebook.com]
 match = -27.8%%
@@ -42,9 +42,9 @@ title = #mamnem #recipe #recipes #tiktokrecipe #asianfood ...
 url = https://www.tiktok.com/@jphamskitchen/video/7118403446163770667
 
 [www.youtube.com]
-match = -144.4%%
-title = Chuẩn VỊ NEM NƯỚNG, Bí quyết làm Nem Nướng Viên dai ...
-url = https://www.youtube.com/watch?v=C58Hlp6UXfQ
+match = -155.6%%
+title = Tipps and Tricks - How to make CHA GIO - Authentic ...
+url = https://www.youtube.com/watch?v=YdTLFfXiGMk
 
 [www.kymdan.com]
 match = -5.6%%
