--- a/images/ruot-goi-vuong-warmdream-45x45/config.ini
+++ b/images/ruot-goi-vuong-warmdream-45x45/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-vuong-warmdream-45x45.html
 lastopen = 2024-06-07 01:58:20
 
 [search]
-lastsearch = 2024-07-19 18:44:47
+lastsearch = 2024-07-19 23:40:21
 
 [bellizeno.com]
 match = -14.3%%
@@ -37,9 +37,9 @@ title = Gối tựa vuông hình doraemon 18 giá sỉ, giá bán buôn
 url = https://thitruongsi.com/goi-tua-vuong-hinh-doraemon-18-962168.html
 
 [elambo.vn]
-match = 23.3%%
-title = Ruột Gối Vuông 40x40 cm Bông MICOROFIBER
-url = https://elambo.vn/ruot-goi-sofa-vuong-tua-lung-40x40/
+match = 53.3%%
+title = Ruột Gối Vuông Tựa Lưng Sofa 45x45cm
+url = https://elambo.vn/ruot-goi-vuong-45x45-elambo/
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -92,9 +92,9 @@ title = Inspiration # 5, A Retainer from Gnezdovo - Projekt Forlǫg
 url = https://sagy.vikingove.cz/en/inspiration-5-a-retainer-from-gnezdovo/
 
 [www.youtube.com]
-match = -30.0%%
-title = CLOVE HITCH Nodo parlato la paolina isola d'elba
-url = https://www.youtube.com/watch?v=pRGiR2-ZWLY
+match = -13.3%%
+title = Unboxing Dream Pairs Black Stiletto Heels
+url = https://www.youtube.com/watch?v=3XWOTmcyMcg
 
 [forums.vintagefashionguild.org]
 match = -36.7%%
@@ -120,4 +120,9 @@ url = https://www.tripadvisor.com.sg/Attractions-g580227-Activities-c26-t144-Alb
 match = 3.3%%
 title = My Tele dream comes slowly true
 url = https://unofficialwarmoth.com/threads/my-tele-dream-comes-slowly-true.2117/
+
+[godello.ca]
+match = -3.7%%
+title = Nerello Cappuccio | Godello
+url = https://godello.ca/tag/nerello-cappuccio/
 
