--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-19 17:46:07
+lastsearch = 2024-07-19 23:36:43
 
 [www.tui.co.uk]
-match = -33.3%%
-title = Holiday Types 2024/25
-url = https://www.tui.co.uk/holidays
+match = 0.0%%
+title = 
+url = https://www.tui.co.uk/holidays/tui-blue
 
 [uk.trip.com]
 match = 0.0%%
@@ -42,9 +42,9 @@ title = TUI commands logging??? - Forums
 url = https://www.cfd-online.com/Forums/fluent/45792-tui-commands-logging.html
 
 [www.reddit.com]
-match = -333.3%%
-title = TUI Fly Belgium 737 flying in North America? : r/flightradar24
-url = https://www.reddit.com/r/flightradar24/comments/19daoc4/tui_fly_belgium_737_flying_in_north_america/
+match = 25.0%%
+title = Tui Manchester
+url = https://www.reddit.com/r/flightradar24/comments/1e6yt5g/tui_manchester/
 
 [www.travelgossip.co.uk]
 match = 0.0%%
@@ -147,9 +147,9 @@ title = German tour giant TUI profits from FTI bankrupcy
 url = https://uk.finance.yahoo.com/news/german-tour-giant-tui-profits-100635222.html
 
 [www.reuters.com]
-match = -316.7%%
-title = TUI Travel sees strong 2014 as customers spend more on ...
-url = https://www.reuters.com/article/world/tui-travel-sees-strong-2014-as-customers-spend-more-on-foreign-holidays-idUSBRE9B90FS/
+match = -325.0%%
+title = Tour giant TUI expects bright summer despite higher prices
+url = https://www.reuters.com/business/retail-consumer/tui-posts-less-than-forecast-q2-loss-winter-bookings-rise-2024-05-15/
 
 [www.mybaggage.com]
 match = -116.7%%
