--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-07-19 18:30:29
+lastsearch = 2024-07-19 23:37:13
 
 [www.lazada.vn]
 match = -268.8%%
@@ -22,9 +22,9 @@ title = [ F4 THAILAND ] Warm Dream - EP.6 - NovelToon
 url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.tiktok.com]
-match = -75.0%%
-title = As Warm As Fire Final Episode Ending
-url = https://www.tiktok.com/discover/as-warm-as-fire-final-episode-ending
+match = -181.2%%
+title = Gorgeous @ARLINDA🤍 #beautytok #liptutorial #hudabeauty
+url = https://www.tiktok.com/@hudabeauty/video/7370757654081244459
 
 [eastcoastbeddingusa.com]
 match = -125.0%%
@@ -62,9 +62,9 @@ title = Sparky - Chapter 22 - BelleBasBleue - Avatar
 url = https://archiveofourown.org/works/30860870/chapters/87508054
 
 [osnat.bandcamp.com]
-match = -81.2%%
-title = בזמן אחר - אסנת הראל | Osnat Harel
-url = https://osnat.bandcamp.com/album/-
+match = -225.0%%
+title = Ave Maria אדון הסליחות - בזמן אחר - אסנת הראל | Osnat Harel
+url = https://osnat.bandcamp.com/track/ave-maria
 
 [demxanh.com]
 match = -181.2%%
@@ -119,7 +119,7 @@ url = https://www.dailymail.co.uk/tvshowbiz/article-7671041/Rob-Kardashian-treat
 [www.facebook.com]
 match = -25.0%%
 title = Chăn ga gối đệm Điệp Xuân
-url = https://www.facebook.com/diepxuanco/?locale=lv_LV
+url = https://www.facebook.com/diepxuanco/
 
 [extenzee.com]
 match = -262.5%%
@@ -185,4 +185,9 @@ url = https://mechanicaldesign-job.com/blogs/tkzjoeuq-115//
 match = -237.5%%
 title = 15 Fathoms Deep Sea Apparel®️ | Our favorite hats are back ...
 url = https://www.instagram.com/15_fathoms/reel/C2CDHZSOHCI/
+
+[mastersender.ru]
+match = -193.8%%
+title = beauty school的用法讲解News educations days
+url = http://mastersender.ru/index3.php?name=https://xn--b1aecnalzhcpg.xn--p1ai/tc7oCgKm53afe
 
