--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-19 20:37:28
+lastsearch = 2024-07-19 23:35:36
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = 10.5%%
-title = Frederick Hecht, MD
-url = https://profiles.ucsf.edu/frederick.hecht
+match = 0.0%%
+title = Jeffrey Bluestone, PhD
+url = https://profiles.ucsf.edu/jeffrey.bluestone
 
 [cityofclovis.com]
 match = -65.0%%
@@ -74,7 +74,7 @@ url = https://www.uc.edu/about/financial-aid/starting/apply.html
 [pubmed.ncbi.nlm.nih.gov]
 match = -180.0%%
 title = Polygenic risk modeling for prediction of epithelial ovarian ...
-url = https://pubmed.ncbi.nlm.nih.gov/35314806/
+url = https://pubmed.ncbi.nlm.nih.gov/35027648/
 
 [escholarship.org]
 match = -33.3%%
