--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-07-20 01:46:00
+lastsearch = 2024-07-20 02:44:44
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = NỆM CAO SU THIÊN NHIÊN EVERHOME - DELUXE
 url = https://www.sieuthinem.com/ct-san-pham/273/nem-cao-su-thien-nhien-everhome-deluxe-sieu-thi-nem-com.html
 
 [demxanh.com]
-match = -100.0%%
-title = Danh sách đại lý đệm bông ép Everhome uy tín trên toàn ...
-url = https://demxanh.com/danh-sach-dai-ly-dem-bong-ep-everhome-uy-tin-tren-toan-quoc.html
+match = -71.4%%
+title = Đệm bông ép 1m8x2m (180x200cm) giá bao nhiêu?
+url = https://demxanh.com/dem-bong-ep-1m8x2m-180x200cm-gia-bao-nhieu.html
 
 [www.ebay.com]
 match = -100.0%%
@@ -27,9 +27,9 @@ title = Should an Abugida script be created for Vietnamese? ...
 url = https://www.quora.com/Should-an-Abugida-script-be-created-for-Vietnamese-An-abugida-script-in-my-opinion-will-look-cool-and-can-also-be-the-first-ever-home-grown-script-instead-of-the-forever-taking-Chinese-characters-or-the-foreign
 
 [sieuthidemonline.vn]
-match = -61.9%%
-title = Đệm Foam cao cấp Everhome - SieuthidemOnline.vn
-url = https://sieuthidemonline.vn/dem-foam-cao-cap-everhome/
+match = -85.7%%
+title = Đệm cao su thiên nhiên cao cấp Lavender Everhome
+url = https://sieuthidemonline.vn/dem-cao-su-lavender/
 
 [thegioidemviet.vn]
 match = -119.0%%
@@ -37,9 +37,9 @@ title = [New] Bảng Giá nệm cao su Kim Cương - Sale Tháng 3, 4 ...
 url = https://thegioidemviet.vn/dem-cao-su-kim-cuong/
 
 [www.diepxuan.com]
-match = 23.8%%
-title = Nệm everhome TC 15F 16 20 - Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html
+match = -61.9%%
+title = Điệp Xuân Nệm Everhome - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/nem-everhome.html
 
 [bachhoadem.vn]
 match = 28.6%%
@@ -130,4 +130,9 @@ url = https://www.amazon.com/ask/questions/asin/B00AKI5Y9E/ref=ask_atf_aqp_dp
 match = -4.8%%
 title = Clovis News, 05-23-1918
 url = https://core.ac.uk/download/pdf/217507194.pdf
+
+[thegioidemdep.com]
+match = -38.1%%
+title = Bảng Giá Đệm bông ép everhome giá rẻ Sale 70%%
+url = https://thegioidemdep.com/dem-bong-ep-everhome/
 
